fixed scrollpane where if we clicked it, under the scrollbar there would come some blue stuff

--- a/src/belmanprojectbamt/GUI/View/CascadeStyleSheet.css
+++ b/src/belmanprojectbamt/GUI/View/CascadeStyleSheet.css
@@ -30,6 +30,8 @@ and open the template in the editor.
 .scrollpane
 {
     -fx-background: #dddddd;
+    -fx-background-insets: 0;
+    
 }
 
 .scrollpane:focus
